Add repository name to  homepage only for gh-pages deployment

--- a/package.json
+++ b/package.json
@@ -38,5 +38,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://johannsp.github.io"
+  "homepage": "https://johannsp.github.io/CWRUBC-React-Portfolio"
 }
